--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(fundo.jpg')
+  background-image: url('fundo.jpg')
   background-size: cover; 
   background-repeat: no-repeat;
   background-position: center center;
